# multi-agent-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_agent.py
.github/workflows/: tests.yml
agents/: __init__.py  agent_coordinator.py  conversation_handler.py  memory_manager.py
docs/: QUICKSTART.md
examples/: research_team.py
quality/: __init__.py  peer_review.py
schemas/: README.md  experiment_result.schema.json  session_report.schema.json  task_status.schema.json
tasks/: __init__.py  autonomous_loop.py  task_board.py
templates/: CLAUDE.md  SOUL_template.md
tests/: test_agent_coordinator.py  test_autonomous_loop.py  test_conversation_handler.py  test_memory_manager.py  test_peer_review.py  test_task_board.py
